maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:53: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  var a = processNeighborForExit(x, y, TOP, NO_INDICATION);
                                ^ShortestPathMaze:54: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, BOTTOM, a._1);
                            ^ShortestPathMaze:55: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, LEFT, a._1);
                            ^ShortestPathMaze:56: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, RIGHT, a._1);
                            ^